This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

24-Nov-2005  (Lars Duening)
  - (md5.c) The ROTATE_LEFT macro wasn't 64-bit clean (Bug #413).

19-Oct-2005 (Lars Duening)
  - (pkg-tls.c) tls_check_certificate() now returns the low-level API
      values, and throws an error if the connection is not secure.

11-Oct-2005 (Lars Duening)
  - (erq/erq.c, erq/Makefile, xerq/socket.c) Corrected compilation warnings.
  - (lex.c) to_int() no longer accepts "x<num>" as valid sedecimal
       notation (Bug #0000402).

04-Oct-2005 (Lars Duening)
  - (doc/concepts/overloading) New man page (thanks, Coogan!).

02-Oct-2005 (Lars Duening)  (3.2.12-rev.24)
  - (main.c, lex.c, version.sh) Updated to display the correct revision
      number.
  - (interpret.c) put_c_string() incremented the target location pointer
      before storing, causing memory corruption. Luckily it was used
      just by the TLS package so far.

28-Sep-2005 (Lars Duening)
  - (doc/efun/clone_object) Clarified the variable initialisation.

23-Aug-2005 (Lars Duening)
  - (Makefile.in) The PRCS rules first check if PRCS is available.

20-Jun-2005 (Lars Duening)  (3.2.12-dev.725)
  - (patchlevel.h.in, version.sh, mk-patchlevel.sh, Makefiles)
      Modified the version numbering system to be compatible between
      Subversion and PRCS.

13-Jun-2005 (Lars Duening)  (3.2.12-dev.724)
  - (comm.c) Adapted for Mac OS X 10.4.

15-May-2005 (Lars Duening)  (3.2.12-dev.723)
  - (simulate.c) runtime_error() and heart_beat_error() received
      a new argument 'caught' (Bug #0000385).

15-May-2005 (Lars Duening)  (3.2.12-dev.722)
  - (comm.c) Corrected the error messages for errors in the extra
      arguments of input_tl(). (Bug #0000379).

15-May-2005 (Lars Duening)  (3.2.12-dev.721)
  - (call_out.c) Corrected the error messages for errors in the extra
      arguments of call_out(). (Bug #0000379).
