@@ -1,6 +1,10 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+24-Nov-2005  (Gnomi)
+  - (lex.c) <code>(: catch(load_object($1);nolog) :)</code> no
+       longer produces a syntax error (Bug #403).
+
 24-Nov-2005  (Lars Duening)
   - (md5.c) The ROTATE_LEFT macro wasn't 64-bit clean (Bug #413).
 
